--- a/Node/package.json
+++ b/Node/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mysql": "^2.17.1",
+    "mysql-events": "0.0.11",
     "socket.io": "^2.2.0"
   }
 }
